{
    "Hello": "Hello",
    "welcome": "Welcome to Instagram",
    "Email": "Email",
    "Password": "Password",
    "Forgot Password?": "Forgot Password?",
    "Login": "Log In",
    "OR": "OR",
    "Continue with Facebook": "Continue with Facebook",
    "Don't have an account?": "Don't have an account?",
    "Sign Up": "Sign Up",
    "Sign up to see photos and videos from your friends.": "Sign up to see photos and videos from your friends.",
    "Log in with Facebook": "Log in with Facebook",
    "Mobile Number or Email": "Mobile Number or Email",
    "Full Name": "Full Name",
    "Username": "Username",
    "By signing up, you agree to our Terms, Data Policy and Cookies Policy": "By signing up, you agree to our Terms, Data Policy and Cookies Policy",
    "Have an account?": "Have an account?"
}